--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -6,6 +6,7 @@
       "name": "SVM and KNN.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +58,7 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "print('good to go')"
       ],
       "execution_count": 0,
       "outputs": []
