--- a/SVM_and_KNN.ipynb
+++ b/SVM_and_KNN.ipynb
@@ -58,7 +58,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#Next, Load the Dataset, Do some Preprocessing and lastly Visualize"
+        "#Next, Load the Dataset, Do some Preprocessing & lastly Visualize"
       ]
     },
     {
